<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="50">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/username_hint"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:id="@+id/etuser"/>
    <DatePicker
        android:layout_weight="10"
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:weightSum="2"
        android:orientation="horizontal"
        android:clickable="true">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rmasc"
            android:text="@string/masc"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="select_s"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fem"
            android:id="@+id/rfem"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="select_s"/>
    </RadioGroup>
    <EditText
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/pass_hint"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:id="@+id/etpass"/>
    <Button
        android:layout_weight="1.2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Register"/>

</LinearLayout>