<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:background="@drawable/logoaplicacion">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Titulo"
        android:layout_weight="2"
        android:textSize="40sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:gravity="center"
            android:layout_gravity="center"
                android:layout_marginTop="60sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:text="@string/Register"
            android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>